Top page image is not mobile friendly Fixes #7

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </ul>
 
     <!-- This Image needs to be mobile friendly -->
-    <img src="data/market_cycle.png" alt="" />
+    <img src="data/market_cycle_2.png" alt="Crypto Cycle" class="responsive" />
 
     <!-- This div controls the entire midle screen action -->
     <div class="box">
