--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/general.css" />
+    <link rel="stylesheet" href="style/text.css" />
     <style>
       * {
         margin: 0;
@@ -40,39 +41,55 @@
       <h1>Required Market Cap to reach your desired price.</h1>
       <form class="form_tab" action="">
         <div class="buttons">
-          <p class="info-text">Insert the current price bellow</p>
-
-          <!-- Current Price -->
-          <input
-            class="button"
-            style="margin-bottom: 5px"
-            type="number"
-            id="currentPrice"
-            placeholder="Current Price"
-            alt="Project current price"
-          />
-
-          <p class="info-text">Insert your desired price bellow</p>
-
-          <!-- New Price -->
-          <input
-            class="button"
-            style="margin-bottom: 5px"
-            type="number"
-            id="newPrice"
-            placeholder="New Price"
-            alt="Project desired price"
-          />
-
-          <!-- Current Market Cap -->
-          <p class="info-text">Insert bellow current project Market Cap</p>
-          <input
-            class="button"
-            type="number"
-            id="marketCap"
-            placeholder="Current Market Cap"
-            alt="Project current market cap"
-          />
+          <!-- ======================================================================= -->
+          <!-- <p class="info-text">Insert the current price bellow</p> -->
+          <div class="mess_box">
+            <!-- Current Price -->
+            <p class="own">
+              <!-- Current Price -->
+              <input
+                class="button"
+                style="margin-bottom: 5px"
+                type="number"
+                id="currentPrice"
+                placeholder="Current Price"
+                alt="Project current price"
+              />
+              <span class="own1"
+                >Here you should enter the project current price</span
+              >
+            </p>
+            <!-- ======================================================================= -->
+            <!-- New Price -->
+            <p class="own">
+              <!-- New Price -->
+              <input
+                class="button"
+                style="margin-bottom: 5px"
+                type="number"
+                id="newPrice"
+                placeholder="New Price"
+                alt="Project desired price"
+              />
+              <span class="own1"
+                >Here you should enter the desired price you want</span
+              >
+            </p>
+            <!-- ======================================================================= -->
+            <p class="own">
+              <!-- New Price -->
+              <input
+                class="button"
+                type="number"
+                id="marketCap"
+                placeholder="Current Market Cap"
+                alt="Project current market cap"
+              />
+              <span class="own1"
+                >Here you should enter the actual project market cap</span
+              >
+            </p>
+          </div>
 
           <!-- Submit -->
           <div class="buttons pad_top">
