CSS is messy Fixes #13

--- a/about.html
+++ b/about.html
@@ -1,113 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style/style-about.css" />
+    <title>About</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style/style-about.css">
-  <title>About</title>
-</head>
-
-<body>
-  <ul>
-    <li><a href="index.html" data-title="home">Home</a></li>
-    <li><a href="about.html" data-title="About">About</a></li>
-    <li><a href="blog.html" data-title="Blog">Blog</a></li>
-    <li><a href="contact.html" data-title="Contact">Contact</a></li>
-  </ul>
-  <img class="market-logo" src="data/market.png" alt="">
-  <h1 class="info-tab">Required Market Cap tool</h1>
-  <p class="cap text-a">
-    <br> With this tool you can discover the necessary market capitalization of the desired project to reach the price
-    you want.
-    As an example lets take <strong class="cardano">Cardano</strong> and see what would be the required market cap in
-    order to reach <em class="price_color">$25</em>.
-    At the moment I am writting this <strong class="cardano">Cardano</strong> price is <em
-      class="price_color">$0.4942</em> and its market cap is <em class="price_color">$16,892,112,294</em>
-    For a <em class="price_color">$25</em> price, Cardano will need a market cap of <strong
-      class="price_color">$854,518,023,776</strong> wich is Bitcoin x2 current market cap.
-    This tool was created so it can give roughly an idea of how much growth a certain projects needs so it can reach
-    certain price.
-    In the above example we can see that <strong class="cardano">Cardano</strong> would require a <strong
-      class="price_color">854 Billions</strong> market cap for a <em class="price_color">$25</em> price.
-    Realistically this would not happen anytime soon. I made this tool mostly because I have seen many people
-    saying some crazy prices (like XRP to $50, Shiba Inu at $10, Dogecoin at $5.... ) for certain projects wich sounded
-    very silly.
-    <br>
-    <br><u>Based on current market prices we would need: </u><br>
-    <br>
-    XRP: <em class="price_color">$2,497,680,354,866</em> market cap for a <em class="price_color">$50</em> price.<br>
-    Shiba Inu: <em class="price_color">$5,468,319,047,067,901</em> market cap for a <em class="price_color">$10</em>
-    price.<br>
-    Dogecoin: <em class="price_color">$664,168,781,349</em> market cap for a <em class="price_color">$5</em> price.
-    <br>
-    <br>
-    <strong>As you noticed, those market cap numbers are unreal unless developers would burn tokens at an crazy rate.
-      This reduces the supply, which theoretically acts to increase the currency's price and benefit investors.</strong>
-    <br>
-    <br> Is Burning Cryptocurrency Good or Bad?
-    <br>Cryptocurrency burning takes tokens out of circulation. Similar to corporate stock buy-backs, it can be
-    beneficial for the
-    cryptocurrency or backfire, depending on investor and user sentiments and how the new supply and demand dynamics
-    influence prices.
-  </p>
-  <br>
-  <br>
-  <h2 class="title-text">What Is Crypto Market Capitalization?</h2>
-  <p class="cap text-b">
-    Market capitalization is a metric used to understand the current market value of an asset. In the context of
-    cryptocurrencies, crypto market capitalization refers to the present value of the cryptocurrency network. You can
-    calculate the market capitalization of an individual cryptocurrency as well as the industry as a whole.
-    In both cases, a popular short-form, market cap, is used to denote the metrics. Many experts say that crypto market
-    capitalization allows them to understand the development and performance of a crypto asset from a broader
-    perspective.
-    Market capitalization is not a concept exclusive to the crypto sector. You can find its use in traditional stock
-    markets as well. Nevertheless, you can spot many differences between these two calculations.
-  </p>
-  <br>
-  <br>
-  <h2 class="title-text">How to Calculate Individual Crypto Market Cap?</h2>
-  <p class="cap text-c">
-    Individual crypto market cap refers to the market capitalization of a particular cryptocurrency or blockchain
-    project.
-    First, there is Bitcoin (BTC), the most popular cryptocurrency coin globally. At the time of writing, the crypto
-    market cap of Bitcoin is <em class="price_color">$406,661,812,251.</em>
-    Taking second place is Ethereum (ETH), which has a market capitalization of <em
-      class="price_color">$210,316,964,058</em>. While it is not as big as Bitcoin, the Ethereum project is one of the
-    most critical projects in the crypto sector.
-  </p>
-  <br>
-  <br>
-  <h2 class="title-text">How to calculate the market cap of any cryptocurrency?</h2>
-  <p class="cap text-d">
-    Crypto market capitalization = supply of crypto assets in circulation x the value of an individual unit.
-    Lets try to calculate the market cap of Litecoin, a popular alternative to Bitcoin. At the time of writing, one
-    Litecoin costs <em class="price_color">$60</em>. It is believed that there are <em
-      class="price_color">71,133,343</em> Litecoins currently in circulation. Therefore, the market cap of Litecoin
-    would be the cost of a single Litecoin multiplied by the total number of Litecoins in circulation.
-    When multiplying these numbers, we get the total figure of Litecoin market cap: <em
-      class="price_color">$4,268,000,580.</em>
-    This number is equal to the total market value of the cryptocurrency network. When the market cap of one
-    cryptocurrency goes higher, we can understand the network is on the path to success. For instance, during the past 4
-    years, the market cap of Bitcoin saw a rise from $68+ billion to $1+ trillion.
-  </p>
-  <br>
-  <br>
-  <h2 class="title-text">The Bottom Line</h2>
-  <p class="cap text-e">
-    While the crypto market cap is indeed an important figure, it is not enough to make the right investment decisions.
-    You should combine this data with other insights and metrics to analyze where the crypto market is going.
-    Nevertheless, if other metrics say that an asset is worth investing in, an increasing market cap is a sufficient
-    signal to back up your decision.
-  </p>
-  <br>
-  <br>
-  <h1 class="warning">THIS IS NOT A FINANCIAL ADVICE</h1>
-  <footer class="footer">
-    <p>© 2022 Florin Bizgan. </p>
-    <p>All rights reserved. </p>
-  </footer>
-</body>
-
+  <body>
+    <ul>
+      <li><a href="index.html" data-title="home">Home</a></li>
+      <li><a href="about.html" data-title="About">About</a></li>
+      <li><a href="blog.html" data-title="Blog">Blog</a></li>
+      <li><a href="contact.html" data-title="Contact">Contact</a></li>
+    </ul>
+    <img class="market-logo" src="data/market.png" alt="" />
+    <h1 class="info-tab">Required Market Cap tool</h1>
+    <p class="cap text-a">
+      <br />
+      With this tool you can discover the necessary market capitalization of the
+      desired project to reach the price you want. As an example lets take
+      <strong class="cardano">Cardano</strong> and see what would be the
+      required market cap in order to reach <em class="price_color">$25</em>. At
+      the moment I am writting this
+      <strong class="cardano">Cardano</strong> price is
+      <em class="price_color">$0.4942</em> and its market cap is
+      <em class="price_color">$16,892,112,294</em> For a
+      <em class="price_color">$25</em> price, Cardano will need a market cap of
+      <strong class="price_color">$854,518,023,776</strong> wich is Bitcoin x2
+      current market cap. This tool was created so it can give roughly an idea
+      of how much growth a certain projects needs so it can reach certain price.
+      In the above example we can see that
+      <strong class="cardano">Cardano</strong> would require a
+      <strong class="price_color">854 Billions</strong> market cap for a
+      <em class="price_color">$25</em> price. Realistically this would not
+      happen anytime soon. I made this tool mostly because I have seen many
+      people saying some crazy prices (like XRP to $50, Shiba Inu at $10,
+      Dogecoin at $5.... ) for certain projects wich sounded very silly.
+      <br />
+      <br /><u>Based on current market prices we would need: </u><br />
+      <br />
+      XRP: <em class="price_color">$2,497,680,354,866</em> market cap for a
+      <em class="price_color">$50</em> price.<br />
+      Shiba Inu: <em class="price_color">$5,468,319,047,067,901</em> market cap
+      for a <em class="price_color">$10</em> price.<br />
+      Dogecoin: <em class="price_color">$664,168,781,349</em> market cap for a
+      <em class="price_color">$5</em> price.
+      <br />
+      <br />
+      <strong
+        >As you noticed, those market cap numbers are unreal unless developers
+        would burn tokens at an crazy rate. This reduces the supply, which
+        theoretically acts to increase the currency's price and benefit
+        investors.</strong
+      >
+      <br />
+      <br />
+      Is Burning Cryptocurrency Good or Bad? <br />Cryptocurrency burning takes
+      tokens out of circulation. Similar to corporate stock buy-backs, it can be
+      beneficial for the cryptocurrency or backfire, depending on investor and
+      user sentiments and how the new supply and demand dynamics influence
+      prices.
+    </p>
+    <br />
+    <br />
+    <h2 class="title-text">What Is Crypto Market Capitalization?</h2>
+    <p class="cap text-b">
+      Market capitalization is a metric used to understand the current market
+      value of an asset. In the context of cryptocurrencies, crypto market
+      capitalization refers to the present value of the cryptocurrency network.
+      You can calculate the market capitalization of an individual
+      cryptocurrency as well as the industry as a whole. In both cases, a
+      popular short-form, market cap, is used to denote the metrics. Many
+      experts say that crypto market capitalization allows them to understand
+      the development and performance of a crypto asset from a broader
+      perspective. Market capitalization is not a concept exclusive to the
+      crypto sector. You can find its use in traditional stock markets as well.
+      Nevertheless, you can spot many differences between these two
+      calculations.
+    </p>
+    <br />
+    <br />
+    <h2 class="title-text">How to Calculate Individual Crypto Market Cap?</h2>
+    <p class="cap text-c">
+      Individual crypto market cap refers to the market capitalization of a
+      particular cryptocurrency or blockchain project. First, there is Bitcoin
+      (BTC), the most popular cryptocurrency coin globally. At the time of
+      writing, the crypto market cap of Bitcoin is
+      <em class="price_color">$406,661,812,251.</em> Taking second place is
+      Ethereum (ETH), which has a market capitalization of
+      <em class="price_color">$210,316,964,058</em>. While it is not as big as
+      Bitcoin, the Ethereum project is one of the most critical projects in the
+      crypto sector.
+    </p>
+    <br />
+    <br />
+    <h2 class="title-text">
+      How to calculate the market cap of any cryptocurrency?
+    </h2>
+    <p class="cap text-d">
+      Crypto market capitalization = supply of crypto assets in circulation x
+      the value of an individual unit. Lets try to calculate the market cap of
+      Litecoin, a popular alternative to Bitcoin. At the time of writing, one
+      Litecoin costs <em class="price_color">$60</em>. It is believed that there
+      are <em class="price_color">71,133,343</em> Litecoins currently in
+      circulation. Therefore, the market cap of Litecoin would be the cost of a
+      single Litecoin multiplied by the total number of Litecoins in
+      circulation. When multiplying these numbers, we get the total figure of
+      Litecoin market cap: <em class="price_color">$4,268,000,580.</em>
+      This number is equal to the total market value of the cryptocurrency
+      network. When the market cap of one cryptocurrency goes higher, we can
+      understand the network is on the path to success. For instance, during the
+      past 4 years, the market cap of Bitcoin saw a rise from $68+ billion to
+      $1+ trillion.
+    </p>
+    <br />
+    <br />
+    <h2 class="title-text">The Bottom Line</h2>
+    <p class="cap text-e">
+      While the crypto market cap is indeed an important figure, it is not
+      enough to make the right investment decisions. You should combine this
+      data with other insights and metrics to analyze where the crypto market is
+      going. Nevertheless, if other metrics say that an asset is worth investing
+      in, an increasing market cap is a sufficient signal to back up your
+      decision.
+    </p>
+    <br />
+    <br />
+    <h1 class="warning">THIS IS NOT A FINANCIAL ADVICE</h1>
+    <footer class="footer">
+      <p>© 2022 Florin Bizgan.</p>
+      <p>All rights reserved.</p>
+    </footer>
+  </body>
 </html>
